--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,28 +1,3 @@
-1. cd sequence (cd in to the sequence directory inside 3110 final project folder)
-2. cd lib (cd into the lib directory inside sequence folder)
-Run the next instructions inside the terminal. You should be in the lib directory.
-3. ocamlc -c deck.mli   
-4. ocamlc -c board.mli 
-5. ocamlc -c deck.ml
-6. ocamlc -c board.ml
-7. ocamlc -c -I . deck.cmo board.ml
-8. utop 
-Now you should have entered utop. Run the following commands inside utop. Include the #
-9. #load "deck.cmo";;
-10. #load "board.cmo";;
-11. let n = Board.init;;
-12. Board.print_board n;;
-The 10x10 Game Board should have printed.
-
-
 NEW INSTRUCTIONS 
-ocamlc -c deck.mli
-ocamlc -c board.mli
-ocamlc -c deck.ml
-ocamlfind ocamlc -package yojson -linkpkg -c board.ml
-utop
-#require "yojson";;
-#load "deck.cmo";;
-#load "board.cmo";;
-let n = Board.init;;
-Board.print_board n;;
+cd sequence
+make game
